# accelerate-tf

./: DerpTest.hs  README.md  accelerate-tf.cabal  fd  notes - commands.txt  stack.yaml  tfnoop.hs
accelerate/: accelerate.cabal
app/: Bench.hs  Main.hs
src/: BlackScholes.hs  Dotp.hs  Dotp_notes.hs  ExampleUtil.hs  Saxpy.hs
src/Data/Array/Accelerate/: AccTF.hs  AccTF2.hs  TF.hs  TensorFlow.hs
src/Data/Array/Accelerate/TensorFlow/Array/: Data.hs
test/: AccelerateDotp.hs  BlackScholes.hs  Test.hs  Test2.hs
