name:                accelerate-tf
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/accelerate-tf#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Data.Array.Accelerate.AccTF, Data.Array.Accelerate.AccTF2
  build-depends:  base >= 4.7 && < 5
                  , accelerate
                  , tensorflow == 0.1.*
                  , tensorflow-core-ops
                  , tensorflow-ops
                  , tensorflow-opgen
                  , tensorflow-proto == 0.1.*
                  , vector
                  , bytestring == 0.10.8.*
  default-language:    Haskell2010

executable DerpTest
  default-language: Haskell2010
  main-is: DerpTest.hs
  build-depends: base >= 4.7 && < 5
                , random
                , HUnit
                , tensorflow == 0.1.*
                , tensorflow-core-ops
                , tensorflow-ops
                , tensorflow-opgen
                , tensorflow-proto == 0.1.*
                , accelerate
                , text
                
executable Dotp
  default-language: Haskell2010
  main-is: src/Dotp.hs
  build-depends: base >= 4.7 && < 5
                , random
                , HUnit
                , tensorflow == 0.1.*
                , tensorflow-core-ops
                , tensorflow-ops
                , tensorflow-opgen
                , tensorflow-proto == 0.1.*
                , accelerate
                , text
                , vector
                , bytestring == 0.10.8.*

executable AccelerateDotp
  default-language: Haskell2010
  main-is: test/AccelerateDotp.hs
  build-depends: base >= 4.7 && < 5
                , accelerate
                , accelerate-tf

source-repository head
  type:     git
  location: https://github.com/githubuser/accelerate-tf
