name:                accelerate-tf
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/accelerate-tf#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, ExampleUtil, Dotp, Saxpy, BlackScholes, Data.Array.Accelerate.TensorFlow, Data.Array.Accelerate.TensorFlow.Array.Data
  build-depends:  base >= 4.7 && < 5
                  , accelerate
                  , random
                  , tensorflow == 0.1.*
                  , tensorflow-core-ops
                  , tensorflow-ops
                  , tensorflow-opgen
                  , tensorflow-proto == 0.1.*
                  , vector
                  , bytestring == 0.10.8.*
                  , accelerate-io
                  , containers
  default-language:    Haskell2010

executable Main
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5
                , random
                , accelerate
                , accelerate-tf

executable AccelerateDotp
  default-language: Haskell2010
  main-is: test/AccelerateDotp.hs
  build-depends: base >= 4.7 && < 5
                , accelerate
                , accelerate-tf
                , vector
                
source-repository head
  type:     git
  location: https://github.com/githubuser/accelerate-tf
